[package]
edition = "2021"
name = "pcb_imu_code"
version = "0.1.0"
license = "GPL3"

[profile.release]
opt-level="s"
lto="fat"

[dependencies]
# embassy stuff
embassy-sync = { version = "0.2.0", path = "embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.2.0", path = "embassy/embassy-executor", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.1.0", path = "embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-1_000_000", "generic-queue"] }
embassy-stm32 = { version = "0.1.0", path = "embassy/embassy-stm32", features = ["nightly", "defmt", "stm32f303vc", "unstable-pac", "memory-x", "time-driver-any", "exti"]  }
embassy-usb = { version = "0.1.0", path = "embassy/embassy-usb", features = ["defmt"] }
embassy-futures = { version = "0.1.0", path = "embassy/embassy-futures" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }
nb = "1.0.0"
embedded-storage = "0.3.0"
static_cell = { version = "1.1", features = ["nightly"]}

# my stuff
ahrs = {version = "0.6", default-features = false}
nalgebra = {version = "*", default-features = false}

uom = {version = "0.34.0", default-features = false, features = ["f32", "si", "autoconvert"]}
